2008-03-04 Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dch1dn.f, qrupdate/dch1up.f, 
	qrupdate/zch1dn.f, qrupdate/zch1up.f: New files.
	* qrupdate/Makefile.in (FSRC): Add them to the list.

	* qrupdate/Makefile.in, qrupdate/dqhqr.f, qrupdate/dqr1up.f,
	qrupdate/dqrdec.f, qrupdate/dqrder.f, qrupdate/dqrinc.f,
	qrupdate/dqrinr.f, qrupdate/dqrqhv.f, qrupdate/zqhqr.f,
	qrupdate/zqr1up.f, qrupdate/zqrdec.f, qrupdate/zqrder.f,
	qrupdate/zqrinc.f, qrupdate/zqrinr.f, qrupdate/zqrqhv.f:
	New files.
	* Makefile.in (CRUFT_DIRS): Add qrupdate to the list.

2008-02-14  John W. Eaton  <jwe@octave.org>

	* misc/f77-fcn.h (F77_XFCN): Call octave_rethrow_exception here
	instead of checking octave_allocation_error.
	* misc/quit.cc (octave_execution_exception): New function.
	(octave_rethrow_exception): New function.
	(octave_handle_signal): Call octave_rethrow_exception instead of
	octave_throw_interrupt_exception.
	* misc/quit.h (octave_execution_error): New variable.
	(END_INTERRUPT_WITH_EXCEPTIONS): Catch octave_execution_exception.
	(octave_execution_exception): New class.
	(octave_exception): New enum.
	(octave_exception_state): Rename from octave_allocation_error.
	Change all uses.

2008-02-12  John W. Eaton  <jwe@octave.org>

	* lapack-xtra/xilaenv.f: New wrapper for Fortran function ilaenv.
	* lapack-xtra/Makefile.in (FSRC): Add it to the list.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* Makerules.in (%.def : %.f): Use mv instead of move-if-change.

2008-02-05  John W. Eaton  <jwe@octave.org>

	* misc/Makefile.in: Unconditionally include $(MAKEDEPS).
	Mark $(MAKEDEPS) as .PHONY targets if omit_deps is true.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-11-01  John W. Eaton  <jwe@octave.org>

	* lapack-xtra/xzlange.f: Include complete implementation of ZLANGE
	function here.

	* blas-xtra/xzdotu.f: Include complete implementation of ZDOTU
	function here.

2007-10-26  John W. Eaton  <jwe@octave.org>

	* lapack/dlals0.f: New file.